# study

./: cmd_index.xml  dir.txt
QT/: .gitignore
QT/demoCmd/: demoCmd  demoCmd.pro
QT/demoGui/: demoGui.pro
QT/dpiFont/: .gitignore
QT/shellDebugQt/: .gitignore
docker/: Dockerfile  buildProjectImage  startProjectImage
docker/android_app/: autoRunInDocker.sh  docker.conf  readMe.txt  setupEnv.sh
docker/bitbake/: Dockerfile  autoRunInDocker.sh  docker.conf  makeAll.sh  setupEnv.sh  startDocker.sh
docker/chapman/: autoRunInDocker.sh  docker.conf  setupEnv.sh  startDockerImage.sh
docker/dbus/: autoRunInDocker.sh  buildDocker.sh  docker.conf  makeAll.sh  setupEnv.sh  startDocker.sh
docker/dvi/: autoRunInDocker.sh  docker.conf  makeAll.sh  setupEnv.sh  startDockerImage.sh
docker/imx8_android/: autoRunInDocker.sh  buildDockerImage.sh  docker.conf  makeAll.sh  readMe.txt  setupEnv.sh
docker/imx_m4/: Dockerfile  autoRunInDocker.sh  docker.conf  makeAll.sh  setupEnv.sh  startDockerImage.sh
docker/javis/: autoRunInDocker.sh  buildDockerImage.sh  docker.conf  readMe.txt  setupEnv.sh  startDocker.sh
docker/javis_sdk/: autoRunInDocker.sh  buildDockerImage.sh  docker.conf  readMe.txt  setupEnv.sh
docker/jetstream/: buildDocker.sh  startDocker.sh
docker/junebox/: buildDocker.sh  startDocker.sh  startDocker_buildAll.sh
docker/littlevgl/: autoRunInDocker.sh  buildDocker.sh  buildEnv.sh  buildHostEnv.sh  docker.conf  makeAll.sh  readMe.txt  setupEnv.sh  startDocker.sh  startEnv.sh  startEnv_buildAll.sh
docker/pccore/: autoRunInDocker.sh  buildDocker.sh  buildDockerImage.sh  docker.conf  makeAll.sh  readMe.txt  setupEnv.sh  startDocker.sh
docker/qt4.8.7/: buildDocker.sh  startDocker.sh  startDocker_withGUI.sh
docker/qt5.11.1/: buildDocker.sh  startDocker.sh  startDocker_withGUI.sh
docker/tetris/: Dockerfile  autoRunInDocker.sh  buildDocker.sh  buildDockerImage.sh  docker.conf  readMe.txt  setupEnv.sh  startDocker.sh
docker/ui-mixers/: Dockerfile  buildDocker.sh  readMe.txt  startDocker.sh  startDocker_build_ui24.sh
docker/yocto/: autoRunInDocker.sh  buildDocker.sh  docker.conf  readMe.txt  setupEnv.sh  startDocker.sh
java/: .gitignore  readMe.txt
java/serialize/: Person.txt
linux/ObjectSerialize/: .gitignore  Makefile  config.h  (+8 more)
linux/shellDebug/dbus/hello-daemon/: CMakeLists.txt
linux/shellDebug/dbus/hello-daemon/src/: helloSetting.cpp  helloSetting.h  main.cpp
linux/shellDebug/dbus/hello-daemon/src/dbus/: commonInterface.cpp  commonInterface_adaptor.h  dbusThread.cpp  dbusThread.h
linux/shellDebug/dbus/hello-daemon/src/utility/: config.h  utility.cpp
linux/shellDebug/dc-daemon/: CMakeLists.txt
linux/shellDebug/dc-daemon/src/: dcProtocol.cpp  dcProtocol.h  main.cpp  main.h  mainThread.cpp  mainThread.h  tcpSocketThread.cpp  udpSocketThread.cpp
linux/shellDebug/dc-daemon/src/dbus/: commonInterface.cpp  commonInterface.h  commonInterface_proxy.h
linux/shellDebug/dc-daemon/src/network/: channelIndex.h  secureTCPSocket.cpp  secureTCPSocket.h  sslLib.cpp  tcpClient.cpp  tcpClient.h  tcpServer.cpp  tcpServer.h  tcpSocket.cpp  tcpSocket.h  udpSocket.h
linux/shellDebug/dc-daemon/src/utility/: dcUtility.cpp  dcUtility.h  msgThread.cpp  msgThread.h  thread.h
linux/socket/dc-daemon/: CMakeLists.txt
linux/socket/dc-daemon/src/: main.cpp
linux/socket/dc-daemon/src/dbus/: commonInterface.cpp  commonInterface.h
linux/socket/dc-daemon/src/module/: moduleThread.h  protocol.cpp  protocol.h
linux/socket/dc-daemon/src/network/: channelIndex.cpp  networkThread.cpp  networkThread.h  secureTCPServer.h  secureTCPSocket.cpp  secureTCPSocket.h  socket.h  sslLib.cpp  tcpClient.cpp  tcpClient.h  tcpServer.cpp  tcpServer.h
linux/socket/dc-daemon/src/utility/: byteArray.h  dcUtility.cpp  msgQueue.h  msgThread.cpp  serializer.cpp  serializer.h  thread.cpp  typedef.h
linux/socket/ir-daemon/: CMakeLists.txt  README.md
linux/socket/ir-daemon/conf/: ir-daemon.service  ir-dbus.conf
linux/socket/ir-daemon/src/: IrUDPServerHandler.cpp  IrUDPServerHandler.h  config.h  irUtilities.cpp  irUtilities.h  main.cpp  videoEP.h
linux/socket/ir-daemon/src/client/: ClientSetting.cpp  ClientSetting.h  IRRecvThread.cpp  IRRecvThread.h  TCPClientThread.cpp  TCPClientThread.h
linux/socket/ir-daemon/src/dbus/: CmdHandlerInterface.cpp  CmdHandlerInterface.h  CmdHandlerManagerProxy-glue.h  CmsfsIrInterface.cpp  CmsfsIrInterface.h  CmsfsIrProxy-glue.h
linux/socket/ir-daemon/src/server/: IRSendThread.cpp  IRSendThread.h  ServerSetting.cpp  ServerSetting.h  TCPServerThread.cpp  TCPServerThread.h
linux/socket/ir-daemon/src/utility/: CmsfsUtils.h  Error.h  IPAddress.cpp  IPAddress.h  IRDataBuffer.cpp  IRDataBuffer.h  MsgQueue.cpp  MsgQueue.h  Socket.cpp  Socket.h  Thread.cpp  Thread.h  UDPServer.cpp  UDPServer.h  config.h  jsIrUtils.cpp  jsIrUtils.h  typedef.h
linux/socket/ir-daemon/xml/: CmdHandlerManager.xml
linux/tools/linux/minigui/mg-samples-1.6.10/src/: Makefile  Makefile.am  Makefile.bak  Makefile.in  MiniGUI.cfg  MiniGUI.cfg.bak  animation  animation.c  bitblt  bmpbkgnd  bmpbkgnd.c  button  button.c  capture  capture.c  caretdemo  caretdemo.c  combobox  combobox.c  coolbar  coolbar.c  createicon  createicon.c  cursordemo  cursordemo.c  dialogbox  dialogbox.c  drawicon  drawicon.c  edit  edit.c  gridview  gridview.c  gridview_ext  gridview_ext.c  helloworld  helloworld.c  iconview  iconview.c  input  (+49 more)
linux/tools/linux/minigui/mg-samples-1.6.10/src/.deps/: animation.Po  bitblt.Po  bmpbkgnd.Po  button.Po  capture.Po  caretdemo.Po  combobox.Po  coolbar.Po  createicon.Po  cursordemo.Po  dialogbox.Po  drawicon.Po  edit.Po  gridview.Po  gridview_ext.Po  helloworld.Po  iconview.Po  input.Po  listbox.Po  listview.Po  loadbmp.Po  menubutton.Po  monthcal.Po  mycontrol.Po  mywins.Po  newtoolbar.Po  painter.Po  progressbar.Po  propsheet.Po  scrollbar.Po  scrollview.Po  scrollwnd.Po  scrollwnd2.Po  simplekey.Po  skindemo.Po  spinbox.Po  static.Po  stretchblt.Po  timeeditor.Po  trackbar.Po  (+1 more)
linux/tools/linux/minigui/mg-samples-1.6.10/src/res/: Makefile
qt/: .gitignore
(+1242 files in other folders)
